# cvipco

./: micro.yaml  site.tgz  testfile.py
.github/workflows/: main.yml
ansible/: hosts  playbook.yaml
back/: Dockerfile  pyproject.toml
back/src/: main.py
front/: pyproject.toml
front/front/: asgi.py  settings.py  urls.py  wsgi.py
front/playground/: views.py
front/playground/templates/: hello.html
terraform/AWS/: 00-provider.tf  01-networking.tf  02-instance.tf  03-output.tf  variables.tf
terraform/DigitalOcean/: 00-provider.tf  01-networking.tf  02-instance.tf  variables.tf
