[tool.poetry]
name = "back"
version = "0.1.0"
description = "a simple backend service on python for MVP"
authors = ["Andy Golubev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
